--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ code {
 
 @layer components {
   .navbar-div {
-    @apply absolute flex items-center z-50 justify-center top-8 left-[-12rem]  h-[270px] w-[458px] border-[3px] border-black cursor-pointer;
+    @apply absolute flex items-center z-50 bg-white justify-center top-9 left-[-8rem]  h-[270px] w-[458px] border-[3px] border-black cursor-pointer;
   }
 
   .navbar-div-lg {
@@ -40,7 +40,15 @@ code {
   }
 
   .navbar-ent {
-    @apply absolute flex flex-col z-50 top-8 p-[17px] justify-between left-[-1rem] h-[170px] w-[168px] text-left border-[3px] border-black cursor-pointer;
+    @apply absolute bg-white flex flex-col z-50 top-9 p-[17px] justify-between left-[-1rem] h-[170px] w-[168px] text-left border-[3px] border-black cursor-pointer;
+  }
+
+  .navbar-com {
+    @apply absolute bg-white flex z-50 gap-x-5  top-9 h-[280px] w-[800px] left-[-25rem] justify-around border-[3px] border-black cursor-pointer;
+  }
+
+  .navbar-company {
+    @apply absolute bg-white flex flex-col z-50 top-9 p-[17px] justify-between left-[-1rem] h-[210px] w-[140px] text-left border-[3px] border-black cursor-pointer;
   }
 }
 
